Changelog for Babel.

Babel 2.2.0-pl
==============
- Fixed bug in validation which is performed on setting a link manually.
- Improved performance of TV synchronization.
- Regarding issue #10: Added checks to handle invalid Babel settings (defined by the user).

Babel 2.1.1-pl1
==============
- Fixed issue #9: Calling deprecated and non-existing method in babel.class

Babel 2.1.1-rc1
==============
- Added &resourceId parameter to BabelLinks snippet.
- Added French translation for new keys from version 2.1.0-beta.
- Added BabelTranslation snippet to get the id of a translated resource in a given context.
- Fixed bug with empty babel settings (contextKeys and syncTvs).
- In order to protect the Babel TV from being manipulated manually its type is set to 'hidden' by default.

Babel 2.1.0-beta
==============
- Added Frech translation: Thanks to Romain <romain@meltingmedia.net>
- New Babel-Box:
  - A chunk is used to generate the language links (mgr/babelBoxItem).
  - Changed CSS.
  - Added JavaScript (for the langauge layers, see below).
  - All languages (contexts) of current group are displayed even if there are no links defined.
  - If there is no link to a language it's background is light gray.
  - When mouseovering a language link a layer is displayed where you can
	- create a translation (new resource) if no link is defined.
  	- manually link the translation to an existing resource if no link is defined.
  	- remove a link if a link is defined.
  - Added validation to keep the babel TV clear
  - Added several keys to the lexicon: French translation still pending.

Babel 2.0.0-beta
==============
- Total reengineering of the whole extra (code structure and logic, too).
  => NOT BACKWARD COMPATIBLE to older versions.
- Fixed issue with primary key validation errors when linking the Babel TV to templates
- Added build script
- Added multilanguage support for the extra itself
- Easier but more powerfull configuration: