@@ -2,6 +2,7 @@ Changelog for Babel.
 
 Babel 2.2.0-pl
 ==============
+- Fixed bug which occured when creating new resources.
 - Fixed bug in validation which is performed on setting a link manually.
 - Improved performance of TV synchronization.
 - Regarding issue #10: Added checks to handle invalid Babel settings (defined by the user).
